kubefiles/test/test_knative_broker_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: test-kafka-broker-ingress
  name: kafka-broker-ingress
  namespace: knative-eventing
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: kafka-broker-ingress
          servicePort: 80
        path: /broker(/|$)(.*)
